order-server-deploy/k8s/cluster_autoscaler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-autoscaler
  namespace: kube-system #autoscaler는 kube-system에 적용해야함.
  labels:
    app: cluster-autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-autoscaler
  template:
    metadata:
      labels:
        app: cluster-autoscaler
    spec:
      serviceAccountName: cluster-autoscaler #RBAC 연결.
      containers:
        - image: registry.k8s.io/autoscaling/cluster-autoscaler:v1.29.0 
          name: cluster-autoscaler
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          command: #오토스케일러의 동작방식
            - ./cluster-autoscaler
            - --cloud-provider=aws #eks 사용중이므로 aws로 설정
            - --namespace=kube-system #오토스케일러가 동작하는 네임스페이스
            - --cluster-name=eks-prac #EKS 클러스터 이름
            - --logtostderr=true #로그출력
            - --stderrthreshold=info #로그레벨 (info와 error 출력)
            - --balance-similar-node-groups #오토밸런싱
            - --skip-nodes-with-system-pods=true #시스템 파드가 떠있는 노드는 제거X         
            - --skip-nodes-with-local-storage=true #로컬 스토리지 사용중인 노드는 제거X
            - --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/eks-prac
            # 위는 노드 그룹 자동 감지. 노드그룹에 붙인 태그를 기준으로 감지한다.
            # 노드그룹 생성할 때 태그를 반드시 붙여야함
            # k8s.io/cluster-autoscaler/enabled = true
            # k8s.io/cluster-autoscaler/eks-prac = owned
          volumeMounts:
            - name: ssl-certs
              mountPath: /etc/ssl/certs/ca-certificates.crt
              readOnly: true
      volumes:
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs/ca-bundle.crt
