order-server-deploy/k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ko-order-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ko-order-backend
  template:
    metadata:
      labels:
        app: ko-order-backend
    spec:
      containers:
      - name: ko-order-backend
        image: 443370682320.dkr.ecr.ap-northeast-2.amazonaws.com/ordersystem:latest
        ports:
        - containerPort: 8080
        resources:
        # 컨테이너가 사용할수 있는 리소스의 최대치
          limits:
            cpu: "1"
            memory: "500Mi"
        # 컨테이너가 시작될떄 보장받아야 하는 최소 자원
          requests:
            cpu: "0.5"
            memory: "250Mi"
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /product/list
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ko-order-backend-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ko-order-backend
